@@ -1,3 +1,6 @@
+2003-09-10  Tim Waugh  <twaugh@redhat.com>
+	* src/Relationship.py: Fixed typos in relationship descriptions.
+
 2003-09-10  Alex Roitman  <shura@alex.neuro.umn.edu>
 	* src/plugins/SimpleBookTitle.py: Add functionality to "From file".  
 	* src/AddMedia.py: Make it a modal dialog. 
